style: more attempts at overflow fixes

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -5,9 +5,6 @@
 
 html {
     position: relative;
-    width: 100vw;
-    max-width: 100vw;
-    min-height: 100vh;
 }
 
 // default body styles
@@ -25,7 +22,7 @@ body {
     &.nav-open {
         // responsive to tablet
         @media only screen and (max-width: $tablet) {
-            overflow-y: hidden;
+            overflow: hidden;
         }
     }
 
